<resources>
    <string name="app_name">Salud-App</string>
    <string name="TextV1">¡Bienvenid@!</string>
    <string name="TextV2">Regístrate:</string>
    <string name="TextV3">Selecciona tú rol:</string>
    <string name="ImageVF">Fondo</string>
    <string name="Butt1">Profesores</string>
    <string name="Butt2">Estudiantes</string>
    <string name="Butt3">ADMINISTRADORES</string>
    <string name="Butt4">Siguiente</string>
    <string name="ImageButt1">Salida</string>
    <string name="TextV4">Salir</string>
    <string name="ImageButt2">Universidad ABC</string>
    <string name="ImageButt3">Logo APP</string>
    <string name="Butt5">Profesor</string>
    <string name="ImageV1">Carga tú Foto Profesor</string>
    <string name="Butt6">+Subir Foto ↑</string>
    <string name="row1">Nombres: </string>
    <string name="row2">Apellidos: </string>
    <string name="row3">Programa: </string>
    <string name="row4">Contraseña: </string>
    <string name="Butt7">Registrar</string>
    <string name="TextV6">Volver</string>
    <string name="TextV7">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="ImageButt7">Volver</string>
    <string name="Butt8">Estudiante</string>
    <string name="ImageButt8">Volver</string>
    <string name="TextV8">Volver</string>
    <string name="ImageV2">Carga tú Foto Estudiante</string>
    <string name="Butt9">+Subir Foto ↑</string>
    <string name="TextV9">Diligencia con tus datos todos los campos a continuación:</string>
    <string name="Butt10">Registrar</string>
    <string name="ImageButt9">Salir</string>
    <string name="ImageButt10">Volver</string>
    <string name="TextV10">Salir</string>
    <string name="TextV11">Volver</string>
    <string name="TextV12">¡Registro completado exitosamente!</string>
    <string name="TextInputLay1">Usuario</string>
    <string name="EditTextUsuario">Usuario</string>
    <string name="EditTextPassword">Contraseña</string>
    <string name="EditTextUsuario1">Usuario</string>
    <string name="EditTextPassword1">Contraseña</string>
    <string name="Butt11">Ingresar</string>
    <string name="TextV13">¿Olvidaste tú Contraseña?</string>
    <string name="ImageV4">Logo Universidad</string>
    <string name="docente">Docente</string>
    <string name="estudiante">ESTUDIANTE</string>
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">INGRESAR</string>
    <string name="action_sign_in_short">INGRESAR</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="image">Thumbnail</string>
    <string name="btnHistory">Ver historial</string>
    <string name="btnDelete">Eliminar</string>
    <string name="btnUpdate">Actualizar</string>
    <string name="todo">TODO</string>
    <string name="estado">ESTADO:</string>
    <string name="acceso">HABILITADO</string>
    <string name="nombre">Nombre:</string>
    <string name="doc">Documento:</string>
    <string name="programa">Programa:</string>
    <string name="email">E-mail:</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="textprueba">Prueba</string>
    <string name="textprueba2">limpio</string>
    <string name="documento">Documento</string>
    <string name="select">Seleccionar</string>
    <string name="documentoData">1002890681</string>
    <string name="statusData">Habilitado</string>
    <string name="nameData">Roberto Uchiha</string>
    <string name="emailData">Robertouchiha@ugenerica.edu.co</string>
    <string name="progData">Programación de ninjutsus</string>
    <string name="statusDataProf">Inhabilitado</string>
    <string name="nameDataProf">Jason Momoa</string>
    <string name="emailDataProf">Jasonmomoa@uabc.edu.co</string>
    <string name="progDataProf">Biología marina</string>
    <string name="txtVvalor">Seleccione una Persona</string>
    <string name="txtV2">Seleccione un establecimiento</string>
    <string name="fecha">Fecha</string>
    <string name="Hora">Hora</string>
    <string name="respuestas">Respuestas</string>
    <string name="history">Historial</string>
    <string name="horario">Horario</string>
    <string name="asignatura">Asignatura</string>
    <string name="curso">Curso</string>
    <string name="horariostatic">Mie-14-16</string>
    <string name="asigStatic">Python</string>
    <string name="cursoStatic">612B</string>
    <string name="ListCursos">Listado de cursos:</string>
    <string name="codigo">Código:</string>
    <string name="codigoStatic">202108091225:</string>
    <string name="Lunes">Lunes:</string>
    <string name="Martesc">Martes:</string>
    <string name="Miércoles">Miercoles:</string>
    <string name="Jueves">Jueves:</string>
    <string name="Viernes">Viernes:</string>
    <string name="sabado">Sábado:</string>
    <string name="foto">Foto</string>
    <string name="reporte">Reporte diario:</string>
    <string name="listEstudiantes">Listado estudiantes</string>
    <string name="listDocentes">Listado docentes</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="forgetpass">¿Olvidaste la contraseña?</string>
    <string name="registrar">REGISTRARSE</string>


</resources>