<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CAF3F8"
    android:orientation="vertical">


    <ListView
        android:id="@+id/list"
        android:layout_width="411dp"
        android:layout_height="441dp"
        android:layout_marginBottom="206dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/foto"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/reporte"
        app:layout_constraintBottom_toTopOf="@+id/list"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="15dp"
        android:text="@string/listEstudiantes"
        android:textColor="#018584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>