<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#CAF3F8"
    android:orientation="vertical">


    <ListView
        android:id="@+id/listEst2"
        android:layout_width="411dp"
        android:layout_height="441dp"
        android:layout_marginBottom="206dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/statusestList"
        android:layout_width="80dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/estado"
        app:layout_constraintBottom_toTopOf="@+id/listEst2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewlistNameEst"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/listEst2"
        app:layout_constraintStart_toEndOf="@+id/statusestList" />

    <TextView
        android:id="@+id/textViewDocListEst"
        android:layout_width="160dp"
        android:layout_height="39dp"
        android:background="#018685"
        android:gravity="center"
        android:text="@string/doc"
        app:layout_constraintBottom_toTopOf="@+id/listEst2"
        app:layout_constraintStart_toEndOf="@+id/textViewlistNameEst" />

    <TextView
        android:id="@+id/textView99210"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:text="@string/listDocentes"
        android:textColor="#018584"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ListEstBackBtn"
        android:layout_width="53dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#C9F2F7"
        app:layout_constraintEnd_toStartOf="@+id/textView99210"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageButton
        android:id="@+id/ListEstLgtBtn"
        android:layout_width="57dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#C9F2F7"
        android:tint="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/textView99210"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

</androidx.constraintlayout.widget.ConstraintLayout>