<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/listEst2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CAF3F8"
    android:backgroundTint="#CAF3F8"
    tools:context=".Detalle_Estudiante">

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="360dp"
        android:layout_height="400dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:background="#A675B39A"
        android:stretchColumns="1"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/btnUpdateEst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/STATE"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp"
                android:text="@string/curso"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:padding="20dp"
                android:text="@string/asigStatic"
                android:textColor="#FFFFFF"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/row0"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/codigo"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/docData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#99E0E0"
                android:inputType="number"
                android:padding="10dp"
                android:text="@string/documentoData"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="@color/black"
                android:textColorLink="@color/black"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:text="@string/documentoData" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/nombre"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBFBE"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/docente"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/nameData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#4DBEBD"
                android:inputType="text"
                android:padding="10dp"
                android:text="@string/nameData"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/purple_200"
                android:textSize="16sp"
                android:textStyle="normal"
                tools:ignore="TextViewEdits"
                tools:text="@string/nameData" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/rowC1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/Lunes"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/progData"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#9AE1E1"
                android:gravity="bottom"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@color/teal_700" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/Martesc"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/emailData"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:inputType="textWebEmailAddress"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/miercoles"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/Miércoles"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/miercolesrta"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#9AE1E1"
                android:gravity="bottom"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@color/teal_700" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/jueves"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/Jueves"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/juevesrta"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:inputType="textWebEmailAddress"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/viernes"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#99E0E0"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/Viernes"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/viernesrta"
                android:layout_width="fill_parent"
                android:layout_height="41dp"
                android:background="#9AE1E1"
                android:gravity="bottom"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_gravity="center"
            android:background="@color/teal_700" />

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/teal_700">

            <TextView
                android:id="@+id/sabado"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:padding="10dp"
                android:text="@string/sabado"
                android:textColor="#024545"
                android:textColorHighlight="@color/purple_200"
                android:textColorHint="#00B3EA"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/sabadorta"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#4DBDBC"
                android:gravity="bottom"
                android:inputType="textWebEmailAddress"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHighlight="@color/purple_200"
                android:textColorLink="@color/white"
                android:textSize="16sp"
                android:textStyle="normal" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/btndeleteEst"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="168dp"
        android:background="@drawable/buttons_styles2"
        android:backgroundTint="#018685"
        android:onClick="viewHistorial"
        android:text="@string/btnDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <Button
        android:id="@+id/btnUpdateEst"
        android:layout_width="231dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/buttons_styles2"
        android:backgroundTint="#018685"
        android:onClick="viewHistorial"
        android:text="@string/btnUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2" />

    <ImageButton
        android:id="@+id/btnBackEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#CAF3F8"
        android:contentDescription="@string/back"
        android:onClick="viewHistorial"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/back"
        app:tint="#289190" />

    <ImageView
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="logosalud"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout2"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/salud_appx48"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="4dp"
        android:background="#CAF3F8"
        android:backgroundTint="#CAF3F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUpdateEst"
        app:srcCompat="@drawable/u_abc"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/btnLogoutEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#CAF3F8"
        android:onClick="viewHistorial"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/logout"
        app:tint="#FF0000"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>